--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -10,11 +10,18 @@
 <title>템플릿 html (view 페이지 생성 시 기본적용)</title>
 </head>
 <body>
+	<!-- 최상단의 네비게이션 바 (Nav Bar) -->
+	<!-- 외부의 navbar.html import -->
+
+	<nav th:replace="~{navbar::navbarFragment}"></nav>
 
 	<!-- 기본 템플릿에 삽입될 내용 - Start -->
 	<th:block layout:fragment="content"></th:block>
 	<!-- 기본 템플릿에 삽입될 내용 - END -->
 
+	<!-- 부트스트랩 자바 스크립트 import -->
+	<script th:src="@{/bootstrap.min.js}"></script>
+	
 </body>
 </html>
 
