--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -22,6 +22,10 @@
 	<!-- 부트스트랩 자바 스크립트 import -->
 	<script th:src="@{/bootstrap.min.js}"></script>
 	
+	<!-- 자바스크립트 Start -->
+	<th:block layout:fragment="script"></th:block>
+	<!-- 자바스크립트 End -->
+	
 </body>
 </html>
 
