--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -9,8 +9,17 @@
 		</button>
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="navbar-nav me-auto mb-2 mb-lg-0">
-				<li class="nav-item"><a class="nav-link" href="#">로그인</a></li>
-				<li class="nav-item"><a class="nav-link" th:href="@{/user/signup}">회원가입</a></li>
+				<li class="nav-item">
+					<a class="nav-link" sec:authorize="isAnonymous()" th:href="@{/user/login}">로그인</a>
+					<a class="nav-link" sec:authorize="isAuthenticated" th:href="@{/user/logout}">로그아웃</a>
+					<!-- 
+						sec:authorize="isAnonymous()" : 현재 로그아웃된 상태
+						sec:authorize="isAuthenticated()" : 현재 로그인된 상태
+					 -->				
+				</li>
+				<li class="nav-item">
+				<a class="nav-link" th:href="@{/user/signup}">회원가입</a>
+				</li>
 			</ul>
 		</div>
 	</div>
