--- a/src/main/resources/templates/question_form.html
+++ b/src/main/resources/templates/question_form.html
@@ -5,7 +5,8 @@
 		질문등록
 	</h5>
 
-	<form th:action="@{/question/create}" th:object="${questionForm}" method="post">
+	<form th:object="${questionForm}" method="post">
+		<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
 		<!-- 오류 메시지 출력 부분 -->
 		
 		<!-- 외부 파일에서 import -->
