--- a/src/main/resources/templates/answer_form.html
+++ b/src/main/resources/templates/answer_form.html
@@ -3,6 +3,12 @@
 
 	<h5 class="my-3 border-bottom pb-2">답변 수정</h5>
 	
+	<!-- form에서 action이 빠져있음. URL에서 URI를 action으로 처리해서 controller를 호출하게 됨
+		CSRF : Spring Security에서 form action에 보안 인증키가 hidden으로 자동으로 들어감.
+		action이 빠져있으면 직접 넣어서 처리해야 한다.
+		
+		action을 생략해서 하나의 view 페이지에서 여러 URI정보를 만들어서 controller를 보낼 수 있다.
+	-->
 	<form th:object="${answerForm}" method="post">
 		<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
 		
