--- a/src/main/resources/templates/question_list.html
+++ b/src/main/resources/templates/question_list.html
@@ -1,14 +1,27 @@
 
 <html layout:decorate="~{layout}">
-
-
 <div layout:fragment="content" class="container my-3">
+
+	<div class="row my-3">
+		<div class="col-6">
+			<!-- 새글 등록 버튼 -->
+			<a th:href="@{/question/create}" class="btn btn-primary">질문 등록하기</a>
+		</div>
+		<div class="col-6">
+			<div class="input-group">
+				<input type="text" id="search_kw" class="form-control"
+					th:value="${kw}">
+				<button class="btn btn-outline-secondary" type="button"
+					id="btn_search">찾기</button>
+			</div>
+		</div>
+	</div>
 	<table class="table">
 		<thead class="table-dark">
 			<!-- 제목을 처리 -->
 			<tr class="text-center">
 				<th>번호</th>
-				<th style="width:50%">제목</th>
+				<th style="width: 50%">제목</th>
 				<th>글쓴이</th>
 				<th>작성일시</th>
 			</tr>
@@ -27,72 +40,83 @@
 
 			<!-- Thymeleaf에서 링크를 처리 : @{ } -->
 			<!-- | String + 변수 | : 문자열과 변수를 연결 -->
-			
-		<!--  	<tr th:each="question, loop : ${questionList}">  -->
-			
+
+			<!--  	<tr th:each="question, loop : ${questionList}">  -->
+
 			<tr class="text-center" th:each="question, loop : ${paging}">
 				<!--  
 				<td th:text="${loop.count}">번호</td>
 				-->
-				
+
 				<!-- 번호 = 전체게시물수 - (현재페이지 * 페이징당게시물수) - 나열인덱스  -->
-				
-				<td th:text="${paging.getTotalElements-(paging.number*paging.size)-loop.index}"> 번호 </td>
-				
-				<td class="text-start">
-					<a th:href="@{|/question/detail/${question.id}|}">[[${question.subject}]]</a>
+
+				<td
+					th:text="${paging.getTotalElements-(paging.number*paging.size)-loop.index}">
+					번호</td>
+
+				<td class="text-start"><a
+					th:href="@{|/question/detail/${question.id}|}">[[${question.subject}]]</a>
 					<span class="text-danger small ms-2"
-						th:if="${#lists.size(question.answerList)>0}"
-						th:text="${#lists.size(question.answerList)}">
-					</span>
-				</td>
-				<td>
-					<span th:if="${question.author != null}" 
-							th:text="${question.author.username}">
-					</span>
-				</td>
+					th:if="${#lists.size(question.answerList)>0}"
+					th:text="${#lists.size(question.answerList)}"> </span></td>
+				<td><span th:if="${question.author != null}"
+					th:text="${question.author.username}"> </span></td>
 				<td>[[ ${#temporals.format(question.createDate,
-					'yyyy-MM-HH:mm')}]]</td>
+					'yyyy-MM-dd HH:mm')}]]</td>
 			</tr>
-			
+
 		</tbody>
 	</table>
-	
+
 	<!-- 페이징 처리 시작 -->
 	<div th:if="${!paging.isEmpty()}">
 		<ul class="pagination justify-content-center">
-		
+
 			<!-- 이전 페이지가 존재하지 않으면 이전에 링크를 비활성화 -->
-			<li class="page-item" th:classappend="${!paging.hasPrevious}? 'disabled'">
-			
+			<li class="page-item"
+				th:classappend="${!paging.hasPrevious}? 'disabled'">
 				<!-- paging.number : 현재페이지 -->
-				<a class="page-link" th:href="@{|?page=${paging.number-1}|}">
-				이전 </a>
+				<a class="page-link" href="javascript:void(0)" th:data-page="${paging.number-1}">이전</a>
 			</li>
-			
+
 			<!-- 첫 페이지부터 마지막 페이지까지 루프를 돌려서 출력 -->
 			<!-- th:if="${page >= paging.number-5 and page <= paging.number+5}" -->
-			
+
 			<li th:each="page : ${#numbers.sequence(0,paging.totalPages-1)}"
 				th:if="${5*(paging.number/5) <= page and (5*((paging.number/5)+1)-1) >= page }"
-				th:classappend="${page==paging.number}? 'active'" class="page-item"
-			>
-				
+				th:classappend="${page==paging.number}? 'active'" class="page-item">
+
 				<a th:text=${page+1} class="page-link" th:href="@{|?page=${page}|}"></a>
 			</li>
-			
+
 			<!-- 다음을 처리하는 블락 -->
 			<li class="page-item" th:classappend="${!paging.hasNext}? 'disabled'">
-				<a class="page-link" th:href="@{|?page=${paging.number+1}|}">
-				다음</a>
+				<a class="page-link" href="javascript:void(0)" th:data-page="${paging.number+1}">다음</a>
 			</li>
 		</ul>
 	</div>
 	<!-- 페이징 처리 끝 -->
 
-	<!-- 새글 등록 버튼 -->
-	<a th:href="@{/question/create}" class="btn btn-primary"> 질문 등록하기 </a>
-
+	<form th:action="@{/question/list}" method="get" id="searchForm">
+		<input type="hidden" id="kw" name="kw" th:value="${kw}"> 
+		<input type="hidden" id="page" name="page" th:value="${paging.number}">
+	</form>
 </div>
+
+<script layout:fragment="script" type='text/javascript'>
+const page_elements = document.getElementsByClassName("page-link");
+Array.from(page_elements).forEach(function(element){
+	element.addEventListener('click', function(){
+		document.getElementById('page').value = this.dataset.page;
+		document.getElementById('searchForm').submit();
+	});
+});
+const btn_search = document.getElementById("btn_search");
+btn_search.addEventListener('click', function(){
+	document.getElementById('kw').value = document.getElementById('search_kw').value;
+	document.getElementById('page').value = 0;
+	document.getElementById('searchForm').submit();
+});
+</script>
 
 </html>
