--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -7,7 +7,7 @@
 	content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
 <link rel="stylesheet" type="text/css" th:href="@{/bootstrap.min.css}">
 
-<title>템플릿 html (view 페이지 생성 시 기본적용)</title>
+<title>Zisu's Home </title>
 </head>
 <body>
 	<!-- 최상단의 네비게이션 바 (Nav Bar) -->
